Cleaned up Folder File Structure of Start-Bootstrap-Freelancer.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="intro-text">
                         <span class="name">A.Z. Riel</span>
                         <hr class="star-light">
-                        <span class="skills">Smart Books for Smarter Babies</span>
+                        <span class="skills">Smart Books for Smarter Babies.</span>
                     </div>
                 </div>
             </div>
@@ -231,6 +231,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
+
+<!--                     <object type = "image/svg+xml" data="img/image.svg">Your browswer doesn't support svg</object>
+ -->
                     <ul>
                         <li>Real Stories</li>
                         <li>Real Meaning</li>
