Added links to iBooks store.

--- a/index.html
+++ b/index.html
@@ -516,12 +516,17 @@
 
                             <img src="img/portfolio3/BP_Laugh.png" class="img-responsive img-centered" alt="">
                             <p>Includes: Laughable Alphabet Analysis, Letters A to Z, Lines, Perpendicular, Parallel, and Circular, Degrees 90°, -90°, ±180°, Acute angles, Right angles, Obtuse angles, and Pattern Recognition.</p>
+                            <br>
+                            <a href="https://itunes.apple.com/us/book/laughable-alphabet-analysis/id1109923141?mt=11">
+                            <img src="img/svg/iBooks_Badge.svg" class="img-responsive img-centered" alt="">
+                            </a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             <ul class="list-inline item-details">
 <!--                                 <li>Client: -->
    <!--                                  <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
                                 </li> -->
-                                <li>Work in progress
+                                <li><small>The Apple logo, iBooks, iPhone, and iPod touch are trademarks of Apple Inc., registered in the U.S. and other countries.</small>
    <!--                                  <strong><a href="http://startbootstrap.com">April 2014</a>
                                     </strong> -->
                                 </li>
@@ -530,7 +535,6 @@
                                     </strong>
                                 </li> -->
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
                 </div>
@@ -673,21 +677,24 @@
                             <img src="img/portfolio3/BP_Selfie.png" class="img-responsive img-centered" alt="">
 
                             <p>You&#39;re a Winner! Yay! You followed the link. You are the best. You get first place. A journey to discovering true self-esteem. Life does not stop on page one.</p>
+                            <br>
+                            <a href="https://itunes.apple.com/us/book/selfie-esteem-for-millenials/id1099520735?mt=11">
+                            <img src="img/svg/iBooks_Badge.svg" class="img-responsive img-centered" alt="">
+                            </a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             <ul class="list-inline item-details">
 <!--                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
-                                </li>
-                                <li>Work in progress
-<!--                                     <strong><a href="http://startbootstrap.com">SELFIE-steem</a>
-                                    </strong> -->
+                                </li> -->
+                                <li><small>The Apple logo, iBooks, iPhone, and iPod touch are trademarks of Apple Inc., registered in the U.S. and other countries.</small>
                                 </li>
 <!--                                 <li>Service:
                                     <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li> -->
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+<!--                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button> -->
                         </div>
                     </div>
                 </div>
@@ -711,21 +718,26 @@
                             <hr class="star-primary">
                             <img src="img/portfolio3/BP_Hello.png" class="img-responsive img-centered" alt="">
                             <p>_Hello and welcome to the human race. Earth is your new home. Earth is your birthplace. It's not always easy. Say "Hello World, It&#39;s me!" A book about infinite possibility.</p>
+                            <br>
+                            
+                            <a href="https://itunes.apple.com/us/book/hello-world/id1125601444?mt=11">
+                            <img src="img/svg/iBooks_Badge.svg" class="img-responsive img-centered" alt="">
+                            </a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+
                             <ul class="list-inline item-details">
-<!--                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li> -->
-                                <li>Work in progress
-<!--                                     <strong><a href="http://startbootstrap.com">_Hello World It&#39;s Me!</a>
-                                    </strong> -->
+                                <li><small>The Apple logo, iBooks, iPhone, and iPod touch are trademarks of Apple Inc., registered in the U.S. and other countries.</small>
                                 </li>
-<!--                                 <li>Service:
+<!--                                 <li>Work in progress
+                                    <strong><a href="http://startbootstrap.com">_Hello World It&#39;s Me!</a>
+                                    </strong>
+                                </li>
+                                <li>Service:
                                     <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li> -->
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+
                         </div>
                     </div>
                 </div>
@@ -757,7 +769,7 @@
                                 </li>
                                 <li>Work in progress
 <!--                                     <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong> -->
+                                    </strong>
                                 </li>
 <!--                                 <li>Service:
                                     <strong><a href="http://startbootstrap.com">Web Development</a>
