--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#about">ABOUT</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">CONTACT ME</a>
+                        <a href="#contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
