--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#about">ABOUT</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">CONTACT ME</a>
+                        <a href="#contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
                     <div class="intro-text">
                         <span class="name">A.Z. Riel</span>
                         <hr class="star-light">
-                        <span class="skills">Smart Books for Smarter Babies.</span>
+                        <span class="skills">Smart Books for Smarter Babies</span>
                     </div>
                 </div>
             </div>
